# accounting-api

./: Cargo.toml  SPECS.md  test.html
migrations/: 20250401202713_initialize_tables.sql
src/: errors.rs  main.rs
src/db/: account.rs  admin_actions.rs  errors.rs  mod.rs
src/models/: account.rs  admin_action.rs  mod.rs  operation.rs
src/routes/: account.rs  mod.rs
