[package]
name = "accounting-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.1", features = ["sync", "rt-multi-thread", "macros"] }
axum = { version = "0.8.1", features = [
    "http1",
    "http2",
    "json",
    "tokio",
    "tracing",
    "macros",
] }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "time",
    "postgres",
    "uuid",
    "json",
    "macros",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["serde"] }
time-macros = "0.2.22"